[package]
name = "fn-stack"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.26.0", features = ["full"] }
tokio-tungstenite = "0.18.0"

[build-dependencies]
syn = { version = "1.0.109", features = ["full"] }
rust-format = "0.3.4"
