[package]
name = "fn-stack"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "4.3.1"
dotenvy = "0.15.6"
rand = "0.8.5"
sqlx = { version = "0.6.2", features = ["mysql", "macros", "runtime-tokio-rustls"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-tungstenite = "0.18.0"

[build-dependencies]
syn = { version = "1.0.109", features = ["full"] }
rust-format = "0.3.4"
