[package]
name = "cargo-fnstack"
description = "Fnstack cli tool"
license = "MIT"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive"] }
clap_derive = "4.1.12"
crossterm = "0.26.1"
inquire = "0.6.0"
os_pipe = "1.1.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["full"] }
which = "4.4.0"
